utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ComponentInclusionConfiguration.ide
package invalid

typedef configuration ComponentInclusionConfiguration {
    backend task main
}
