utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ComponentInclusionConfiguration.ide
package invalid

typedef component configuration ComponentInclusionConfiguration {
    frontend task main
}
